--- a/views/game.pug
+++ b/views/game.pug
@@ -4,9 +4,4 @@ block content
   canvas#rader
   canvas#score
   h3 #{displayName}
-  scrpt#main(
-    src="/javascripts/index/bundle.js",
-    data-displayName=`${displayName}`,
-    data-thumbUrl=`${thumbUrl}`,
-    data-ipAddress=`${ipAddress}`
-  )
+  script#main(src="/javascripts/index/bundle.js", data-displayName=`${displayName}`, data-thumbUrl=`${thumbUrl}`, data-ipAddress=`${ipAddress}`)
